// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`load PluginInstaller list 1`] = `
<div>
  <div
    class="css-1v0y38i-Container e1k65efv0"
    height="500"
  >
    <div
      class="css-1lxv8hi-Container-Horizontal-SandyToolbarContainer e1ecpah20"
    >
      <span
        class="ant-input-group-wrapper ant-input-search"
      >
        <span
          class="ant-input-wrapper ant-input-group"
        >
          <input
            class="ant-input"
            placeholder="Search Flipper plugins..."
            type="text"
            value=""
          />
          <span
            class="ant-input-group-addon"
          >
            <button
              class="ant-btn ant-btn-default ant-btn-icon-only ant-input-search-button"
              type="button"
            >
              <span
                aria-label="search"
                class="anticon anticon-search"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="search"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                  />
                </svg>
              </span>
            </button>
          </span>
        </span>
      </span>
    </div>
    <div
      class="css-bgfc37-View-FlexBox-FlexColumn-Container ecd8vvk0"
      tabindex="0"
    >
      <div
        class="ant-dropdown-trigger css-18abd42-View-FlexBox-FlexColumn ewpmr9y0"
      >
        <div
          class="css-1otvu18-View-FlexBox-FlexRow-TableHeadContainer ebt14ub1"
        >
          <div
            class="css-it9ar6-TableHeadColumnContainer ebt14ub0"
            title="name"
            width="25%"
          >
            <div
              class="ebt14ub3 css-x4q70f-InteractiveContainer-TableHeaderColumnInteractive e14xwmxq0"
              style="z-index: auto; right: 0px; bottom: 0px; width: 100%; height: 100%;"
            >
              <div
                class="css-1054ash-TableHeaderColumnContainer ebt14ub2"
              >
                Name
              </div>
            </div>
          </div>
          <div
            class="css-1m9d124-TableHeadColumnContainer ebt14ub0"
            title="version"
            width="10%"
          >
            <div
              class="ebt14ub3 css-x4q70f-InteractiveContainer-TableHeaderColumnInteractive e14xwmxq0"
              style="z-index: auto; right: 0px; bottom: 0px; width: 100%; height: 100%;"
            >
              <div
                class="css-1054ash-TableHeaderColumnContainer ebt14ub2"
              >
                Version
              </div>
            </div>
          </div>
          <div
            class="css-qmwopt-TableHeadColumnContainer ebt14ub0"
            title="description"
            width="flex"
          >
            <div
              class="ebt14ub3 css-x4q70f-InteractiveContainer-TableHeaderColumnInteractive e14xwmxq0"
              style="z-index: auto; right: 0px; bottom: 0px; width: 100%; height: 100%;"
            >
              <div
                class="css-1054ash-TableHeaderColumnContainer ebt14ub2"
              >
                Description
              </div>
            </div>
          </div>
          <div
            class="css-ux5muk-TableHeadColumnContainer ebt14ub0"
            title="install"
            width="15%"
          >
            <div
              class="ebt14ub3 css-x4q70f-InteractiveContainer-TableHeaderColumnInteractive e14xwmxq0"
              style="z-index: auto; right: 0px; bottom: 0px; width: 100%; height: 100%;"
            >
              <div
                class="css-1054ash-TableHeaderColumnContainer ebt14ub2"
              >
                Action
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-p5h61d-View-FlexBox-FlexColumn-Container ecd8vvk0"
      >
        <div
          class="ant-dropdown-trigger css-18abd42-View-FlexBox-FlexColumn ewpmr9y0"
        >
          <div
            class="css-hg3ptm-View-FlexBox-FlexRow-TableBodyRowContainer ef77i511"
            data-key="flipper-plugin-hello"
          >
            <div
              class="css-hdg6vt-TableBodyColumnContainer ef77i510"
              title=""
              width="25%"
            >
              <div
                style="display: inline-flex; align-items: center; overflow: hidden; gap: 8px;"
              >
                <span
                  class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line"
                  style="min-width: 0;"
                >
                  hello
                </span>
              </div>
            </div>
            <div
              class="css-1rdsust-TableBodyColumnContainer ef77i510"
              title=""
              width="10%"
            >
              <span
                class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line"
              >
                0.1.0
              </span>
            </div>
            <div
              class="css-1bw2bjn-TableBodyColumnContainer ef77i510"
              title=""
              width="flex"
            >
              <div
                class="css-s1wsbn-Container-Horizontal e1hsqii12"
              >
                <span
                  class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line"
                >
                  World?
                </span>
                <a
                  class="ant-typography"
                  href="https://yarnpkg.com/en/package/flipper-plugin-hello"
                >
                  <div
                    class="css-xl1cnv-ColoredIconCustom ejte90o0"
                    color="var(--light-color-button-active)"
                    size="16"
                    src="https://facebook.com/images/assets_DO_NOT_HARDCODE/facebook_icons/info-circle_filled_16.png"
                  />
                </a>
              </div>
            </div>
            <div
              class="css-4dx1ef-TableBodyColumnContainer ef77i510"
              title=""
              width="15%"
            >
              <button
                class="ant-btn ant-btn-circle ant-btn-primary ant-btn-sm ant-btn-icon-only"
                style="margin: 1px;"
                type="button"
              >
                <span
                  aria-label="cloud-download"
                  class="anticon anticon-cloud-download"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="cloud-download"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M624 706.3h-74.1V464c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v242.3H400c-6.7 0-10.4 7.7-6.3 12.9l112 141.7a8 8 0 0012.6 0l112-141.7c4.1-5.2.4-12.9-6.3-12.9z"
                    />
                    <path
                      d="M811.4 366.7C765.6 245.9 648.9 160 512.2 160S258.8 245.8 213 366.6C127.3 389.1 64 467.2 64 560c0 110.5 89.5 200 199.9 200H304c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8h-40.1c-33.7 0-65.4-13.4-89-37.7-23.5-24.2-36-56.8-34.9-90.6.9-26.4 9.9-51.2 26.2-72.1 16.7-21.3 40.1-36.8 66.1-43.7l37.9-9.9 13.9-36.6c8.6-22.8 20.6-44.1 35.7-63.4a245.6 245.6 0 0152.4-49.9c41.1-28.9 89.5-44.2 140-44.2s98.9 15.3 140 44.2c19.9 14 37.5 30.8 52.4 49.9 15.1 19.3 27.1 40.7 35.7 63.4l13.8 36.5 37.8 10C846.1 454.5 884 503.8 884 560c0 33.1-12.9 64.3-36.3 87.7a123.07 123.07 0 01-87.6 36.3H720c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h40.1C870.5 760 960 670.5 960 560c0-92.7-63.1-170.7-148.6-193.3z"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
          <div
            class="css-hg3ptm-View-FlexBox-FlexRow-TableBodyRowContainer ef77i511"
            data-key="flipper-plugin-world"
          >
            <div
              class="css-hdg6vt-TableBodyColumnContainer ef77i510"
              title=""
              width="25%"
            >
              <div
                style="display: inline-flex; align-items: center; overflow: hidden; gap: 8px;"
              >
                <span
                  class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line"
                  style="min-width: 0;"
                >
                  world
                </span>
              </div>
            </div>
            <div
              class="css-1rdsust-TableBodyColumnContainer ef77i510"
              title=""
              width="10%"
            >
              <span
                class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line"
              >
                0.2.0
              </span>
            </div>
            <div
              class="css-1bw2bjn-TableBodyColumnContainer ef77i510"
              title=""
              width="flex"
            >
              <div
                class="css-s1wsbn-Container-Horizontal e1hsqii12"
              >
                <span
                  class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line"
                >
                  Hello?
                </span>
                <a
                  class="ant-typography"
                  href="https://yarnpkg.com/en/package/flipper-plugin-world"
                >
                  <div
                    class="css-xl1cnv-ColoredIconCustom ejte90o0"
                    color="var(--light-color-button-active)"
                    size="16"
                    src="https://facebook.com/images/assets_DO_NOT_HARDCODE/facebook_icons/info-circle_filled_16.png"
                  />
                </a>
              </div>
            </div>
            <div
              class="css-4dx1ef-TableBodyColumnContainer ef77i510"
              title=""
              width="15%"
            >
              <button
                class="ant-btn ant-btn-circle ant-btn-primary ant-btn-sm ant-btn-icon-only"
                style="margin: 1px;"
                type="button"
              >
                <span
                  aria-label="cloud-download"
                  class="anticon anticon-cloud-download"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="cloud-download"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M624 706.3h-74.1V464c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v242.3H400c-6.7 0-10.4 7.7-6.3 12.9l112 141.7a8 8 0 0012.6 0l112-141.7c4.1-5.2.4-12.9-6.3-12.9z"
                    />
                    <path
                      d="M811.4 366.7C765.6 245.9 648.9 160 512.2 160S258.8 245.8 213 366.6C127.3 389.1 64 467.2 64 560c0 110.5 89.5 200 199.9 200H304c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8h-40.1c-33.7 0-65.4-13.4-89-37.7-23.5-24.2-36-56.8-34.9-90.6.9-26.4 9.9-51.2 26.2-72.1 16.7-21.3 40.1-36.8 66.1-43.7l37.9-9.9 13.9-36.6c8.6-22.8 20.6-44.1 35.7-63.4a245.6 245.6 0 0152.4-49.9c41.1-28.9 89.5-44.2 140-44.2s98.9 15.3 140 44.2c19.9 14 37.5 30.8 52.4 49.9 15.1 19.3 27.1 40.7 35.7 63.4l13.8 36.5 37.8 10C846.1 454.5 884 503.8 884 560c0 33.1-12.9 64.3-36.3 87.7a123.07 123.07 0 01-87.6 36.3H720c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h40.1C870.5 760 960 670.5 960 560c0-92.7-63.1-170.7-148.6-193.3z"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-1lxv8hi-Container-Horizontal-SandyToolbarContainer e1ecpah20"
    >
      <div
        class="ant-row ant-row-no-wrap ant-row-middle"
        style="margin-left: -4px; margin-right: -4px;"
      >
        <div
          class="ant-col"
          style="padding-left: 4px; padding-right: 4px; flex-basis: auto; min-width: 0;"
        >
          <input
            class="ant-input"
            placeholder="Select a Flipper package or just drag and drop it here..."
            type="text"
            value=""
          />
        </div>
        <div
          class="ant-col"
          style="padding-left: 4px; padding-right: 4px; flex: 0 0 auto; min-width: 0;"
        >
          <button
            class="ant-btn ant-btn-default ant-btn-icon-only"
            disabled=""
            title="Reset"
            type="button"
          >
            <span
              aria-label="close"
              class="anticon anticon-close"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="close"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          class="ant-col"
          style="padding-left: 4px; padding-right: 4px; flex: 0 0 auto; min-width: 0;"
        >
          <button
            class="ant-btn ant-btn-default ant-btn-icon-only"
            title="Select a Flipper package or just drag and drop it here..."
            type="button"
          >
            <span
              aria-label="upload"
              class="anticon anticon-upload"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="upload"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M400 317.7h73.9V656c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V317.7H624c6.7 0 10.4-7.7 6.3-12.9L518.3 163a8 8 0 00-12.6 0l-112 141.7c-4.1 5.3-.4 13 6.3 13zM878 626h-60c-4.4 0-8 3.6-8 8v154H214V634c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v198c0 17.7 14.3 32 32 32h684c17.7 0 32-14.3 32-32V634c0-4.4-3.6-8-8-8z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
      <div
        class="css-5ukfaz-View-FlexBox-FlexRow-ButtonContainer e1q5b1ee1"
      >
        <div
          class="css-wospjg-View-FlexBox-FlexRow e1ufal3d0"
        >
          <button
            class="ant-btn ant-btn-primary"
            disabled=""
            type="button"
          >
            <span>
              Install
            </span>
          </button>
          <div
            class="css-170i4ha-View-FlexBox-FlexRow-ErrorGlyphContainer e1q5b1ee0"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`load PluginInstaller list with one plugin installed 1`] = `
<div>
  <div
    class="css-1v0y38i-Container e1k65efv0"
    height="500"
  >
    <div
      class="css-1lxv8hi-Container-Horizontal-SandyToolbarContainer e1ecpah20"
    >
      <span
        class="ant-input-group-wrapper ant-input-search"
      >
        <span
          class="ant-input-wrapper ant-input-group"
        >
          <input
            class="ant-input"
            placeholder="Search Flipper plugins..."
            type="text"
            value=""
          />
          <span
            class="ant-input-group-addon"
          >
            <button
              class="ant-btn ant-btn-default ant-btn-icon-only ant-input-search-button"
              type="button"
            >
              <span
                aria-label="search"
                class="anticon anticon-search"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="search"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                  />
                </svg>
              </span>
            </button>
          </span>
        </span>
      </span>
    </div>
    <div
      class="css-bgfc37-View-FlexBox-FlexColumn-Container ecd8vvk0"
      tabindex="0"
    >
      <div
        class="ant-dropdown-trigger css-18abd42-View-FlexBox-FlexColumn ewpmr9y0"
      >
        <div
          class="css-1otvu18-View-FlexBox-FlexRow-TableHeadContainer ebt14ub1"
        >
          <div
            class="css-it9ar6-TableHeadColumnContainer ebt14ub0"
            title="name"
            width="25%"
          >
            <div
              class="ebt14ub3 css-x4q70f-InteractiveContainer-TableHeaderColumnInteractive e14xwmxq0"
              style="z-index: auto; right: 0px; bottom: 0px; width: 100%; height: 100%;"
            >
              <div
                class="css-1054ash-TableHeaderColumnContainer ebt14ub2"
              >
                Name
              </div>
            </div>
          </div>
          <div
            class="css-1m9d124-TableHeadColumnContainer ebt14ub0"
            title="version"
            width="10%"
          >
            <div
              class="ebt14ub3 css-x4q70f-InteractiveContainer-TableHeaderColumnInteractive e14xwmxq0"
              style="z-index: auto; right: 0px; bottom: 0px; width: 100%; height: 100%;"
            >
              <div
                class="css-1054ash-TableHeaderColumnContainer ebt14ub2"
              >
                Version
              </div>
            </div>
          </div>
          <div
            class="css-qmwopt-TableHeadColumnContainer ebt14ub0"
            title="description"
            width="flex"
          >
            <div
              class="ebt14ub3 css-x4q70f-InteractiveContainer-TableHeaderColumnInteractive e14xwmxq0"
              style="z-index: auto; right: 0px; bottom: 0px; width: 100%; height: 100%;"
            >
              <div
                class="css-1054ash-TableHeaderColumnContainer ebt14ub2"
              >
                Description
              </div>
            </div>
          </div>
          <div
            class="css-ux5muk-TableHeadColumnContainer ebt14ub0"
            title="install"
            width="15%"
          >
            <div
              class="ebt14ub3 css-x4q70f-InteractiveContainer-TableHeaderColumnInteractive e14xwmxq0"
              style="z-index: auto; right: 0px; bottom: 0px; width: 100%; height: 100%;"
            >
              <div
                class="css-1054ash-TableHeaderColumnContainer ebt14ub2"
              >
                Action
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-p5h61d-View-FlexBox-FlexColumn-Container ecd8vvk0"
      >
        <div
          class="ant-dropdown-trigger css-18abd42-View-FlexBox-FlexColumn ewpmr9y0"
        >
          <div
            class="css-hg3ptm-View-FlexBox-FlexRow-TableBodyRowContainer ef77i511"
            data-key="flipper-plugin-hello"
          >
            <div
              class="css-hdg6vt-TableBodyColumnContainer ef77i510"
              title=""
              width="25%"
            >
              <div
                style="display: inline-flex; align-items: center; overflow: hidden; gap: 8px;"
              >
                <span
                  class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line"
                  style="min-width: 0;"
                >
                  hello
                </span>
              </div>
            </div>
            <div
              class="css-1rdsust-TableBodyColumnContainer ef77i510"
              title=""
              width="10%"
            >
              <span
                class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line"
              >
                0.1.0
              </span>
            </div>
            <div
              class="css-1bw2bjn-TableBodyColumnContainer ef77i510"
              title=""
              width="flex"
            >
              <div
                class="css-s1wsbn-Container-Horizontal e1hsqii12"
              >
                <span
                  class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line"
                >
                  World?
                </span>
                <a
                  class="ant-typography"
                  href="https://yarnpkg.com/en/package/flipper-plugin-hello"
                >
                  <div
                    class="css-xl1cnv-ColoredIconCustom ejte90o0"
                    color="var(--light-color-button-active)"
                    size="16"
                    src="https://facebook.com/images/assets_DO_NOT_HARDCODE/facebook_icons/info-circle_filled_16.png"
                  />
                </a>
              </div>
            </div>
            <div
              class="css-4dx1ef-TableBodyColumnContainer ef77i510"
              title=""
              width="15%"
            >
              <button
                class="ant-btn ant-btn-circle ant-btn-default ant-btn-sm ant-btn-icon-only"
                style="margin: 1px;"
                type="button"
              >
                <span
                  aria-label="delete"
                  class="anticon anticon-delete"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="delete"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
          <div
            class="css-hg3ptm-View-FlexBox-FlexRow-TableBodyRowContainer ef77i511"
            data-key="flipper-plugin-world"
          >
            <div
              class="css-hdg6vt-TableBodyColumnContainer ef77i510"
              title=""
              width="25%"
            >
              <div
                style="display: inline-flex; align-items: center; overflow: hidden; gap: 8px;"
              >
                <span
                  class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line"
                  style="min-width: 0;"
                >
                  world
                </span>
              </div>
            </div>
            <div
              class="css-1rdsust-TableBodyColumnContainer ef77i510"
              title=""
              width="10%"
            >
              <span
                class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line"
              >
                0.2.0
              </span>
            </div>
            <div
              class="css-1bw2bjn-TableBodyColumnContainer ef77i510"
              title=""
              width="flex"
            >
              <div
                class="css-s1wsbn-Container-Horizontal e1hsqii12"
              >
                <span
                  class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line"
                >
                  Hello?
                </span>
                <a
                  class="ant-typography"
                  href="https://yarnpkg.com/en/package/flipper-plugin-world"
                >
                  <div
                    class="css-xl1cnv-ColoredIconCustom ejte90o0"
                    color="var(--light-color-button-active)"
                    size="16"
                    src="https://facebook.com/images/assets_DO_NOT_HARDCODE/facebook_icons/info-circle_filled_16.png"
                  />
                </a>
              </div>
            </div>
            <div
              class="css-4dx1ef-TableBodyColumnContainer ef77i510"
              title=""
              width="15%"
            >
              <button
                class="ant-btn ant-btn-circle ant-btn-primary ant-btn-sm ant-btn-icon-only"
                style="margin: 1px;"
                type="button"
              >
                <span
                  aria-label="cloud-download"
                  class="anticon anticon-cloud-download"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="cloud-download"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M624 706.3h-74.1V464c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v242.3H400c-6.7 0-10.4 7.7-6.3 12.9l112 141.7a8 8 0 0012.6 0l112-141.7c4.1-5.2.4-12.9-6.3-12.9z"
                    />
                    <path
                      d="M811.4 366.7C765.6 245.9 648.9 160 512.2 160S258.8 245.8 213 366.6C127.3 389.1 64 467.2 64 560c0 110.5 89.5 200 199.9 200H304c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8h-40.1c-33.7 0-65.4-13.4-89-37.7-23.5-24.2-36-56.8-34.9-90.6.9-26.4 9.9-51.2 26.2-72.1 16.7-21.3 40.1-36.8 66.1-43.7l37.9-9.9 13.9-36.6c8.6-22.8 20.6-44.1 35.7-63.4a245.6 245.6 0 0152.4-49.9c41.1-28.9 89.5-44.2 140-44.2s98.9 15.3 140 44.2c19.9 14 37.5 30.8 52.4 49.9 15.1 19.3 27.1 40.7 35.7 63.4l13.8 36.5 37.8 10C846.1 454.5 884 503.8 884 560c0 33.1-12.9 64.3-36.3 87.7a123.07 123.07 0 01-87.6 36.3H720c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h40.1C870.5 760 960 670.5 960 560c0-92.7-63.1-170.7-148.6-193.3z"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-1lxv8hi-Container-Horizontal-SandyToolbarContainer e1ecpah20"
    >
      <div
        class="ant-row ant-row-no-wrap ant-row-middle"
        style="margin-left: -4px; margin-right: -4px;"
      >
        <div
          class="ant-col"
          style="padding-left: 4px; padding-right: 4px; flex-basis: auto; min-width: 0;"
        >
          <input
            class="ant-input"
            placeholder="Select a Flipper package or just drag and drop it here..."
            type="text"
            value=""
          />
        </div>
        <div
          class="ant-col"
          style="padding-left: 4px; padding-right: 4px; flex: 0 0 auto; min-width: 0;"
        >
          <button
            class="ant-btn ant-btn-default ant-btn-icon-only"
            disabled=""
            title="Reset"
            type="button"
          >
            <span
              aria-label="close"
              class="anticon anticon-close"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="close"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          class="ant-col"
          style="padding-left: 4px; padding-right: 4px; flex: 0 0 auto; min-width: 0;"
        >
          <button
            class="ant-btn ant-btn-default ant-btn-icon-only"
            title="Select a Flipper package or just drag and drop it here..."
            type="button"
          >
            <span
              aria-label="upload"
              class="anticon anticon-upload"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="upload"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M400 317.7h73.9V656c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V317.7H624c6.7 0 10.4-7.7 6.3-12.9L518.3 163a8 8 0 00-12.6 0l-112 141.7c-4.1 5.3-.4 13 6.3 13zM878 626h-60c-4.4 0-8 3.6-8 8v154H214V634c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v198c0 17.7 14.3 32 32 32h684c17.7 0 32-14.3 32-32V634c0-4.4-3.6-8-8-8z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
      <div
        class="css-5ukfaz-View-FlexBox-FlexRow-ButtonContainer e1q5b1ee1"
      >
        <div
          class="css-wospjg-View-FlexBox-FlexRow e1ufal3d0"
        >
          <button
            class="ant-btn ant-btn-primary"
            disabled=""
            type="button"
          >
            <span>
              Install
            </span>
          </button>
          <div
            class="css-170i4ha-View-FlexBox-FlexRow-ErrorGlyphContainer e1q5b1ee0"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
